# nlp-05

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  lychee.toml  pyproject.toml  zensical.toml
.github/: copilot-instructions.md
.github/workflows/: ci-python-zensical.yml  deploy-zensical.yml  links.yml
data/processed/: case_processed.csv  teja_processed.csv
data/raw/: case_raw.html  teja_raw.html
docs/: glossary.md  index.md  project-instructions.md
src/nlp/: __init__.py  config_case.py  config_teja.py  pipeline_web_html.py  pipeline_web_html_teja.py  stage01_extract.py  stage02_validate_case.py  stage03_transform_case.py  stage03_transform_teja.py  stage04_load.py
